# harbour.space

./: main.py  pyproject.toml  school.db
lectures/01/exercises/: problems.py
lectures/02/exercises/: problems.py
lectures/03/exercises/: problems.py  test_problems.py
lectures/04/exercises/: problems.py
lectures/05/exercises/problems/: 01_setup_and_get_request.py  02_post_request.py  03_get_html.py  04_fastapi_get.py  05_fastapi_post.py  06_tasks_api_flow.py  07_messenger_client.py  07_messenger_server.py
lectures/06/exercises/problems/: 02_sqlite_write_to_students.py  03_sqlite_read_select_basics.py  04_sqlite_read_filters_sort_limit.py  05_sqlite_read_aggregates_groupby.py  07_sqlalchemy_create_and_read_queries.py  db_models.py  school.db
lectures/06/exercises/problems/migrations/: env.py
lectures/06/exercises/problems/migrations/versions/: a1a05329a18d_add_assignments_table.py  fdf95ae9d116_add_assignments_table.py
lectures/07/exercises/: api.py  db_models.py  dockerfile  school.db
lectures/07/exercises/migrations/: env.py
lectures/09/exercises/: problems.py
lectures/10/exercises/: problems.py
