[project]
name = "harbour-space"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.8"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.135.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.48",
    "sqlite-web>=0.7.2",
    "uvicorn>=0.42.0",
]
